womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/importing_omitting_outputs/import_me.wdl
version 1.0

task foo {
  command {
    echo hi
  }
  output {
    String x = read_string(stdout())
  }
  runtime {
    docker: "ubuntu:latest"
  }

}
